Improve memory usage when building large projects (#10120)
This change improves:
- memory usage when building large projects (memory reduced by around 15%)
- performance when building large projects (time reduced by around 25%)

Technical notes:

When looking into memory usage during the build, there are several concerns:
- initial memory usage before starting the build. This is not related to the build itself, but it shows the relative importance of the build-time memory usage in relation to normal editor memory usage.
- final memory usage after finishing the build. The difference between final and initial memory usage is the size of the additional in-memory cache data used by the editor.
- peak temporary memory usage during the build. If some phase of the build requires an unexpectedly large amount of memory, it can become a problem when building large projects on machines with limited memory.

In this changeset I mostly focused on allocation hotspots, i.e. places in code that allocate a lot of temporary objects. This changeset mostly fixes low-handing fruits in the build process. This helps a bit with peak temporary memory usage, I assume this is because there is less GC pressure and fewer throw-away objects overwhelming the eden space. As a nice side-effect, reducing temporary allocations makes the build process noticeably faster.

I measured 3 "modes" of the build process:
- "full": when the project is built, there is no on-disc or in-memory cache.
- "cold": when the project is built, there is an on-disc cache but the in-memory cache is empty (i.e. build after starting the editor).
- "hot": when the project is built, there is both an on-disc and in-memory cache (i.e. build after a previous build).

All measurements were done after running GC. Typical initial memory usage is between **8 and 10 GB** before starting the build. After the build, the editor memory usage increases by around **4 to 5** GB.

Here is the before/after comparison for this changeset:

1. Pe